--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   csv: ^5.0.2
   firebase_core: ^2.15.1
-  firebase_database: ^10.2.5
+  cloud_firestore: ^4.8.5
 
 
 dev_dependencies:
